--- a/catalog/templates/catalog/book_detail.html
+++ b/catalog/templates/catalog/book_detail.html
@@ -2,13 +2,16 @@
 
 {% block content %}     
     <h1>Title: {{ book.title}}</h1>
-    <p><strong>Author:</strong><a href="">{{ book.author}}</a></p>
+    <p><strong>Author:</strong><a href="{% url 'author-detail' book.author.pk %}">{{ book.author}}</a></p>
     <p><strong>Summary:</strong>{{ book.summary}}</p>
     <p><strong>ISBN:</strong>{{ book.isbn}}</p>
     <p><strong>Genre:</strong>{{ book.genre.all|join:", "}}</p>
 
     <div style="margin-left:20px; margin-top:20px">
-        <h4>Copies</h4>
+    <h4>Copies</h4>
+    
+    {% for copy in book.bookinstance_set.all %}
+        <hr>
         <p class="{% if copy.status == 'a' %} text-success {% elif copy.status == 'm' %}text-danger{% else %}text-warning{% endif %}">
             {{ copy.get_status_display }}
         </p>
@@ -17,4 +20,6 @@
         {% endif %}
         <p><strong>Imprint:</strong>{{ copy.imprint }}</p>
         <p class="text-muted"><strong>Id:</strong> {{ copy.id }}</p>
+    {% endfor %}
+        
 {% endblock content %} 
