--- a/catalog/templates/base_generic.html
+++ b/catalog/templates/base_generic.html
@@ -11,7 +11,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="container-fluid">
+    <div class="container-fluid mt-5">
         <div class="row">
             <div class="col-sm-2">
                 {% block sidebar %}
